<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_periksa"
            android:icon="@drawable/ic_balita"
            android:title="@string/menu_periksa" />
        <item
            android:id="@+id/nav_artikel"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_artikel" />
        <item
            android:id="@+id/nav_kontak"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_kontak" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>

</menu>